--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.2.0",
     "@material-ui/core": "^3.7.1",
+    "firebase": "^5.7.1",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
-    "styled-components": "^4.1.3"
+    "react-loading": "^2.0.3",
+    "styled-components": "^4.1.3",
+    "validator": "^10.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.11.1",
     "parcel-bundler": "^1.11.0",
